--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <h1>Th3Form</h1>
-    <h3>Welcome to the form! You have guessed the password correctly and now you can sign up for the Wii Sports Boxing
-        Tournament. Select one of the options below.</h3>
+    <h3>Welcome to the form! I gave you this link if I invited you to the SSHL! Select all of the options below.</h3>
+    <img src="https://prkr9.github.io/sshl/assets/img/SSHL.png">
     <br>
     <input type="text" name="name" id="name" placeholder="Enter your name">
     <button id="sub" class="submit" onclick="submitPee()">Submit Option!</button>
