--- a/assets/iceh/c.html
+++ b/assets/iceh/c.html
@@ -50,7 +50,7 @@
     <div style="width: 100%; height: 100%; text-align:center">
         <div id="game"></div>
     </div>
-    <script src="https://imadejptr.glitch.me/data/loader.js" defer></script>
+    <script src="https://imadejptr.glitch.me/assets/emu/data/loader.js" defer></script>
     <script>
         var style = getComputedStyle(document.body)
         console.log(style.getPropertyValue('--text')) // #336699
